snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.pom.sha256
95031ba3b76b24833555fa1331b4785a19f1b83452170d28cae45a2e49a306b3